--- a/.github/workflows/flux-hr-sync.yaml
+++ b/.github/workflows/flux-hr-sync.yaml
@@ -41,11 +41,9 @@ jobs:
       - name: Extract Repos
         id: extract
         env:
-          FILTER: '[.spec.chart.spec.sourceRef] | unique | .[] | ["\(.namespace)/\(.name)"]'
+          FILTER: '[.spec.chart.spec.sourceRef] | map_values("\(.namespace),\(.name)") | unique'
         run: |
-          repos=$(yq --indent 0 --output-format json eval-all "${FILTER}" \
-              ${{ needs.pre-job.outputs.all_changed_and_modified_files }}
-          )
+          repos=$(yq --indent 0 --output-format json eval-all "${FILTER}" ${{ needs.pre-job.outputs.all_changed_and_modified_files }})
           echo "repos=${repos}" >> $GITHUB_OUTPUT
 
           echo '## Helm Repos' >> $GITHUB_STEP_SUMMARY
@@ -54,10 +52,10 @@ jobs:
           echo '```' >> $GITHUB_STEP_SUMMARY
 
   sync:
-    if: ${{ needs.pre-job.outputs.any_changed == 'true' && needs.extract.outputs.repos != '[]' }}
     name: Helm Repo Sync - Sync Helm Repos
     needs: ["pre-job", "extract"]
     runs-on: home-ops-runner
+    if: ${{ needs.pre-job.outputs.any_changed == 'true' && needs.extract.outputs.repos != '[]' }}
     strategy:
       matrix:
         repos: ${{ fromJSON(needs.extract.outputs.repos) }}
@@ -87,13 +85,10 @@ jobs:
       - name: Install flux
         run: curl -fsSL https://fluxcd.io/install.sh | bash
 
-      - name: Sync Repo
-        continue-on-error: true
-        env:
-          KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
+      - name: Sync Helm Repos
         run: |
-          IFS='/' read -r ns repo <<< "${{ matrix.repos }}"
-          flux --context ${{ matrix.cluster }} --namespace ${ns} reconcile source helm ${repo}
+          jq --raw-output '.[] | split(",") | "\(.[0]) \(.[1])"' <<< '${{ needs.extract.outputs.repos }}' \
+              | xargs -l bash -c 'flux --context ${{ matrix.cluster }} --namespace $0 reconcile source helm $1'
 
   status:
     if: ${{ always() }}
