--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,7 @@
   "extends": [
     ":skipStatusChecks",
     "github>joryirving/renovate-config",
+    "github>joryirving/home-ops//.github/renovate/autoMergeHelm.json5",
     "github>joryirving/home-ops//.github/renovate/customManagers.json5",
     "github>joryirving/home-ops//.github/renovate/grafanaDashboards.json5",
     "github>joryirving/home-ops//.github/renovate/groups.json5",
