--- a/kubernetes/apps/main/external-secrets/onepassword/ks.yaml
+++ b/kubernetes/apps/main/external-secrets/onepassword/ks.yaml
@@ -12,6 +12,7 @@ spec:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
       name: onepassword
+      namespace: &namespace external-secrets
   healthCheckExprs:
     - apiVersion: external-secrets.io/v1beta1
       kind: ClusterSecretStore
@@ -25,5 +26,5 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: external-secrets
+  targetNamespace: *namespace
   timeout: 5m
