--- a/kubernetes/apps/main/media/kyoo/ks.yaml
+++ b/kubernetes/apps/main/media/kyoo/ks.yaml
@@ -11,6 +11,7 @@ spec:
   components:
     - ../../../../infrastructure/components/gatus/external
     - ../../../../infrastructure/components/volsync
+    - ../../../../infrastructure/components/postgres
   interval: 1h
   path: ./kubernetes/apps/base/media/kyoo
   postBuild:
