fix: dashboard json

--- a/kubernetes/apps/base/observability/grafana/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/helmrelease.yaml
@@ -258,6 +258,10 @@ spec:
           gnetId: 11315
           revision: 9
           datasource: Prometheus
+        unifi-pdu:
+          url: "https://raw.githubusercontent.com/kashalls/home-cluster/99b82a2602246726e300e8257197b4ce072472c3/kubernetes/apps/observability/grafana/app/dashboards/unifi-pdu-test.json"
+          datasource:
+            - { name: DS_PROMETHEUS, value: Prometheus }
         cloudflared:
           # renovate: depName="Cloudflare Tunnels (cloudflared)"
           gnetId: 17457
