--- a/kubernetes/apps/base/observability/grafana/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/helmrelease.yaml
@@ -259,7 +259,9 @@ spec:
           revision: 9
           datasource: Prometheus
         unifi-pdu:
-          url: "https://raw.githubusercontent.com/kashalls/home-cluster/99b82a2602246726e300e8257197b4ce072472c3/kubernetes/apps/observability/grafana/app/dashboards/unifi-pdu-test.json"
+          # renovate: depName="UniFi-Poller: PDU Insights - Prometheus"
+          gnetId: 23027
+          revision: 1
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
         cloudflared:
