--- a/kubernetes/apps/base/external-secrets/clustersecretstore.yaml
+++ b/kubernetes/apps/base/external-secrets/clustersecretstore.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword.external-secrets.svc.cluster.local
+      connectHost: http://voyager.internal:7070
       vaults:
         Kubernetes: 1
       auth:
