--- a/kubernetes/apps/base/external-secrets/kustomization.yaml
+++ b/kubernetes/apps/base/external-secrets/kustomization.yaml
@@ -5,3 +5,10 @@ kind: Kustomization
 resources:
   - ./clustersecretstore.yaml
   - ./helmrelease.yaml
+  - ./helmrepository.yaml
+configMapGenerator:
+  - name: external-secrets-values
+    files:
+      - values.yaml=./helm/values.yaml
+configurations:
+  - ./helm/kustomizeconfig.yaml
