chore: op cli use my connect instance

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -15,7 +15,8 @@ vars:
   TALOS_DIR: '{{.ROOT_DIR}}/talos/{{.CLUSTER}}'
 
 dotenv:
-  - '{{.KUBERNETES_DIR}}/components/system-upgrade/versions.env'
+  - '{{.ROOT_DIR}}/onepassword.env'
+  - '{{.SHARED_APPS}}/kube-tools/system-upgrade/versions.env'
 
 env:
   KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
