--- a/.mise.toml
+++ b/.mise.toml
@@ -14,6 +14,7 @@ SCRIPTS_DIR = "{{config_root}}/scripts"
 TALOS_DIR = "{{config_root}}/talos"
 
 _.file = [
+  "{{config_root}}/onepassword.env",
   "{{config_root}}/kubernetes/apps/base/kube-tools/system-upgrade-controller/versions.env"
 ]
 #_.python.venv = { path = "{{config_root}}/.venv", create = true }
