--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -34,8 +34,23 @@ releases:
     version: 1.17.1
     values: ['{{ requiredEnv "SHARED_APPS" }}/kube-system/cilium/helm/values.yaml']
     hooks:
-      - events: ['postsync']
-        command: '{{ requiredEnv "ROOT_DIR" }}/scripts/apply-cilium-networks.sh'
+      - # Wait for cilium CRDs to be available
+        events: ['postsync']
+        command: bash
+        args:
+          - -c
+          - until kubectl --context {{ requiredEnv "CLUSTER" }} get crd ciliumbgppeeringpolicies.cilium.io ciliuml2announcementpolicies.cilium.io ciliumloadbalancerippools.cilium.io &>/dev/null; do sleep 10; done
+        showlogs: true
+      - # Apply cilium network configuration
+        events: ['postsync']
+        command: kubectl
+        args:
+          - --context {{ requiredEnv "CLUSTER" }}
+          - apply
+          - --namespace=kube-system
+          - --server-side
+          - --field-manager=kustomize-controller
+          - --filename={{ requiredEnv "CLUSTER_APPS" }}/kube-system/cilium/config/networks.yaml
         showlogs: true
 
   - name: coredns
@@ -77,7 +92,7 @@ releases:
           - --namespace=external-secrets
           - --server-side
           - --field-manager=kustomize-controller
-          - --filename={{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/base/external-secrets/clustersecretstore.yaml
+          - --filename={{ requiredEnv "SHARED_APPS" }}/external-secrets/clustersecretstore.yaml
         showlogs: true
     needs: ['cert-manager/cert-manager']
 
