--- a/kubernetes/apps/utility/external-secrets/external-secrets/ks.yaml
+++ b/kubernetes/apps/utility/external-secrets/external-secrets/ks.yaml
@@ -11,7 +11,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
-      name: onepassword
+      name: external-secrets
       namespace: &namespace external-secrets
   healthCheckExprs:
     - apiVersion: external-secrets.io/v1beta1
