feat: migrate everything to use OP_CONNECT_HOST

--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -105,7 +105,8 @@ jobs:
       - name: Configure 1password
         uses: 1password/load-secrets-action/configure@v2
         with:
-          service-account-token: ${{ secrets.ONEPASS_SA_TOKEN }}
+          connect-host: ${{ secrets.OP_CONNECT_HOST}}
+          connect-token: ${{ secrets.OP_CONNECT_TOKEN }}
 
       - name: Get Secrets
         uses: 1password/load-secrets-action@v2
