--- a/kubernetes/apps/base/flux-system/tofu-controller/controller/externalsecret.yaml
+++ b/kubernetes/apps/base/flux-system/tofu-controller/controller/externalsecret.yaml
@@ -31,7 +31,7 @@ spec:
     name: *name
     template:
       data:
-        service_account_json: "{{ .OP_CONNECT_TOKEN }}"
+        OP_CONNECT_TOKEN: "{{ .OP_CONNECT_TOKEN }}"
   dataFrom:
   - extract:
       key: 1password
