feat: pass variable in

--- a/kubernetes/apps/base/flux-system/tofu-controller/controller/externalsecret.yaml
+++ b/kubernetes/apps/base/flux-system/tofu-controller/controller/externalsecret.yaml
@@ -32,6 +32,7 @@ spec:
     template:
       data:
         OP_CONNECT_TOKEN: "{{ .OP_CONNECT_TOKEN }}"
+        OP_CONNECT_HOST: "http://voyager.internal:7070"
   dataFrom:
   - extract:
       key: 1password
