chore: update cilium config

--- a/kubernetes/apps/base/kube-system/cilium/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/helm/values.yaml
@@ -19,7 +19,8 @@ cluster:
   # name: main
 cni:
   exclusive: false
-devices: enp+
+dashboards:
+  enabled: true
 enableRuntimeDeviceDetection: true
 endpointRoutes:
   enabled: true
@@ -56,8 +57,6 @@ prometheus:
   serviceMonitor:
     enabled: true
     trustCRDsExist: true
-dashboards:
-  enabled: true
   annotations:
     grafana_folder: Network
 rollOutCiliumPods: true
@@ -82,3 +81,6 @@ securityContext:
       - NET_ADMIN
       - SYS_ADMIN
       - SYS_RESOURCE
+tls:
+   secretsNamespace:
+     create: false
