--- a/kubernetes/apps/base/network/external/echo/helmrelease.yaml
+++ b/kubernetes/apps/base/network/external/echo/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app echo-server
+  name: &app echo
 spec:
   interval: 1h
   chartRef:
@@ -20,7 +20,7 @@ spec:
       retries: 3
   values:
     controllers:
-      echo-server:
+      echo:
         strategy: RollingUpdate
         containers:
           app:
