--- a/kubernetes/apps/utility/kube-tools/fstrim/ks.yaml
+++ b/kubernetes/apps/utility/kube-tools/fstrim/ks.yaml
@@ -16,6 +16,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: kube-system
+  targetNamespace: kube-tools
   timeout: 5m
   wait: false
