--- a/kubernetes/apps/test/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/test/self-hosted/kustomization.yaml
@@ -2,14 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: network
+namespace: self-hosted
 components:
   - ../../../components/clusters/test
   - ../../../components/common
   - ../../../components/repos
 resources:
-  - ./cloudflared/ks.yaml
-  - ./external-dns-cloudflare/ks.yaml
-  - ./external-dns-unifi/ks.yaml
-  - ./ingress-nginx-external/ks.yaml
-  - ./ingress-nginx-internal/ks.yaml
+  - ./echo/ks.yaml
