--- a/kubernetes/apps/utility/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/utility/self-hosted/kustomization.yaml
@@ -10,6 +10,7 @@ components:
 resources:
   - ./acars/ks.yaml
   - ./archiveteam/ks.yaml
+  - ./echo/ks.yaml
   - ./free-game-notifier/ks.yaml
   - ./it-tools/ks.yaml
   - ./meshcentral/ks.yaml
