--- a/kubernetes/apps/main/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/main/self-hosted/kustomization.yaml
@@ -11,8 +11,9 @@ resources:
   - ./actual/ks.yaml
   - ./archiveteam/ks.yaml
   - ./atuin/ks.yaml
+  - ./echo/ks.yaml
   - ./homepage/ks.yaml
   - ./lubelog/ks.yaml
   - ./paperless/ks.yaml
   - ./redlib/ks.yaml
-  # - ./wyze-bridge/ks.yaml
+  - ./wyze-bridge/ks.yaml
