--- a/kubernetes/apps/utility/network/kustomization.yaml
+++ b/kubernetes/apps/utility/network/kustomization.yaml
@@ -8,5 +8,9 @@ components:
   - ../../../components/common
   - ../../../components/repos
 resources:
-  - ./external/ks.yaml
-  - ./internal/ks.yaml
+  - ./cloudflare-ddns/ks.yaml
+  - ./cloudflared/ks.yaml
+  - ./external-dns-cloudflare/ks.yaml
+  - ./external-dns-unifi/ks.yaml
+  - ./ingress-nginx-external/ks.yaml
+  - ./ingress-nginx-internal/ks.yaml
