feat: update to match new structure

--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -67,9 +67,13 @@ spec:
         # Global
         compress-type: "bz2"
         compress-level: "9"
-        # PVC
+        # Minio
+        repo1-block: "y"
+        repo1-bundle: "y"
+        repo1-path: /${APP}
         repo1-retention-full: "30" # days
         repo1-retention-full-type: "time"
+        repo1-s3-uri-style: path
         # R2
         repo2-block: "y"
         repo2-bundle: "y"
@@ -77,13 +81,6 @@ spec:
         repo2-retention-full: "7" # days
         repo2-retention-full-type: time
         repo2-s3-uri-style: path
-        # Minio
-        repo3-block: "y"
-        repo3-bundle: "y"
-        repo3-path: /${APP}
-        repo3-retention-full: "30" # days
-        repo3-retention-full-type: "time"
-        repo3-s3-uri-style: path
       manual:
         repoName: repo1
         options:
@@ -93,42 +90,29 @@ spec:
           app.kubernetes.io/name: ${APP}-crunchy-postgres-backup
       repos:
         - name: repo1
-          volume: &nfs
-            volumeClaimSpec:
-              storageClassName: nfs-slow #csi-driver-nfs
-              volumeName: postgres-nfs
-              accessModes: ["ReadWriteMany"]
-              resources:
-                requests:
-                  storage: 1Mi
+          s3: &minio
+            bucket: postgresql
+            endpoint: s3.${SECRET_DOMAIN}
+            region: ca-west-1
           schedules:
             full: "30 1 * * 0" # Sunday at 01:30
             differential: "30 1 * * 1-6" # Mon-Sat at 01:30
             incremental: "30 3-23 * * *" # Every hour except 01:30-2:30
         - name: repo2
-          s3: &r2
+          s3:
             bucket: crunchy-pgo
             endpoint: ${R2_ENDPOINT}
             region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
           schedules:
             full: "30 2 * * 0" # Sunday at 02:30
             incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
-        - name: repo3
-          s3: &minio
-            bucket: postgresql
-            endpoint: s3.${SECRET_DOMAIN}
-            region: ca-west-1
-          schedules:
-            full: "15 1 * * 0" # Sunday at 01:15
-            differential: "15 1 * * 1-6" # Mon-Sat at 01:15
-            incremental: "15 3-23 * * *" # Every hour except 01:30-2:30
   dataSource:
     pgbackrest:
       stanza: db
       configuration: *backupConfig
       global: *backupFlag
       repo:
-        name: repo3
+        name: repo1
         s3: *minio
   proxy:
     pgBouncer:
@@ -136,7 +120,7 @@ spec:
       replicas: *replicas
       config:
         global:
-          pool_mode: session
+          pool_mode: ${POOL_MODE:=session}
           client_tls_sslmode: prefer
           default_pool_size: "100"
           max_client_conn: "500"
