--- a/kubernetes/apps/utility/self-hosted/echo/ks.yaml
+++ b/kubernetes/apps/utility/self-hosted/echo/ks.yaml
@@ -8,6 +8,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/gatus/external
   interval: 1h
   path: ./kubernetes/apps/base/self-hosted/echo
   postBuild:
