feat: create clusters per-app

--- a/kubernetes/apps/main/downloads/prowlarr/ks.yaml
+++ b/kubernetes/apps/main/downloads/prowlarr/ks.yaml
@@ -10,8 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
+    - ../../../../components/postgres
   dependsOn:
-    - name: crunchy-postgres-cluster
+    - name: crunchy-postgres
       namespace: database
   interval: 1h
   path: ./kubernetes/apps/base/downloads/prowlarr
