--- a/kubernetes/apps/main/observability/gatus/ks.yaml
+++ b/kubernetes/apps/main/observability/gatus/ks.yaml
@@ -8,8 +8,10 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/postgres
   dependsOn:
-    - name: crunchy-postgres-cluster
+    - name: crunchy-postgres
       namespace: database
   interval: 1h
   path: ./kubernetes/apps/base/observability/gatus
