--- a/kubernetes/apps/main/self-hosted/atuin/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/atuin/ks.yaml
@@ -10,9 +10,10 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
+    - ../../../../components/postgres
   interval: 1h
   dependsOn:
-    - name: crunchy-postgres-cluster
+    - name: crunchy-postgres
       namespace: database
   path: ./kubernetes/apps/base/self-hosted/atuin
   postBuild:
