--- a/kubernetes/apps/main/self-hosted/lubelog/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/lubelog/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
+    - ../../../../components/postgres
     - ../../../../components/volsync
   interval: 1h
   path: ./kubernetes/apps/base/self-hosted/lubelog
