--- a/kubernetes/apps/main/self-hosted/paperless/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/paperless/ks.yaml
@@ -10,9 +10,10 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
+    - ../../../../components/postgres
     - ../../../../components/volsync
   dependsOn:
-    - name: crunchy-postgres-cluster
+    - name: crunchy-postgres
       namespace: database
     - name: dragonfly-cluster
       namespace: database
