--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -54,8 +54,8 @@ spec:
       password:
         type: AlphaNumeric
     # Applications
-    - name: "${APP}"
-      databases: ["${APP}"]
+    - name: "${USERNAME:=${APP}}"
+      databases: ${DATABASES:=["${APP}"]}
       password:
         type: AlphaNumeric
   backups:
