--- a/kubernetes/apps/main/downloads/bazarr/ks.yaml
+++ b/kubernetes/apps/main/downloads/bazarr/ks.yaml
@@ -10,9 +10,10 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../../components/gatus/guarded
+    - ../../../../../components/postgres
     - ../../../../../components/volsync
   dependsOn:
-    - name: crunchy-postgres-cluster
+    - name: crunchy-postgres
       namespace: database
   interval: 1h
   path: ./kubernetes/apps/base/downloads/bazarr/app
