--- a/kubernetes/apps/main/media/jellyseerr/ks.yaml
+++ b/kubernetes/apps/main/media/jellyseerr/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/external
+    - ../../../../components/postgres
     - ../../../../components/volsync
   interval: 1h
   path: ./kubernetes/apps/base/media/jellyseerr
