--- a/kubernetes/apps/main/media/kyoo/ks.yaml
+++ b/kubernetes/apps/main/media/kyoo/ks.yaml
@@ -10,6 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/external
+    - ../../../../components/postgres
     - ../../../../components/volsync
   interval: 1h
   path: ./kubernetes/apps/base/media/kyoo
@@ -18,6 +19,8 @@ spec:
       APP: *app
       VOLSYNC_CAPACITY: 50Gi
       VOLSYNC_CACHE_CAPACITY: 25Gi
+      USERNAME: kyoo-all
+      DATABASES: '["kyoo_back", "kyoo_transcoder"]'
   prune: true
   retryInterval: 2m
   sourceRef:
