--- a/kubernetes/apps/utility/self-hosted/echo/ks.yaml
+++ b/kubernetes/apps/utility/self-hosted/echo/ks.yaml
@@ -14,6 +14,7 @@ spec:
   path: ./kubernetes/apps/base/self-hosted/echo
   postBuild:
     substitute:
+      APP: *app
       GATUS_SUBDOMAIN: echo-utility
   prune: true
   retryInterval: 2m
