--- a/kubernetes/apps/main/security/authentik/ks.yaml
+++ b/kubernetes/apps/main/security/authentik/ks.yaml
@@ -12,10 +12,15 @@ spec:
     - ../../../../components/gatus/external
     - ../../../../components/postgres
   dependsOn:
-    - name: crunchy-postgres
+    - name: crunchy-postgres-operator
       namespace: database
     - name: dragonfly-cluster
       namespace: database
+  healthCheckExprs:
+    - apiVersion: postgres-operator.crunchydata.com/v1beta1
+      kind: PostgresCluster
+      failed: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'False')
+      current: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'True')
   interval: 1h
   path: ./kubernetes/apps/base/security/authentik
   postBuild:
