--- a/kubernetes/apps/main/downloads/dashbrr/ks.yaml
+++ b/kubernetes/apps/main/downloads/dashbrr/ks.yaml
@@ -12,8 +12,13 @@ spec:
     - ../../../../components/gatus/guarded
     - ../../../../components/postgres
   dependsOn:
-    - name: crunchy-postgres
+    - name: crunchy-postgres-operator
       namespace: database
+  healthCheckExprs:
+    - apiVersion: postgres-operator.crunchydata.com/v1beta1
+      kind: PostgresCluster
+      failed: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'False')
+      current: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'True')
   interval: 1h
   path: ./kubernetes/apps/base/downloads/dashbrr
   postBuild:
