--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -32,7 +32,7 @@ spec:
       metadata:
         labels:
           app.kubernetes.io/name: ${APP}-crunchy-postgres
-      replicas: &replicas 3
+      replicas: &replicas 2
       dataVolumeClaimSpec:
         storageClassName: local-hostpath
         accessModes: ["ReadWriteOnce"]
@@ -98,22 +98,22 @@ spec:
             full: "30 1 * * 0" # Sunday at 01:30
             differential: "30 1 * * 1-6" # Mon-Sat at 01:30
             incremental: "30 3-23 * * *" # Every hour except 01:30-2:30
-        - name: repo2
-          s3:
-            bucket: crunchy-pgo
-            endpoint: ${R2_ENDPOINT}
-            region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
-          schedules:
-            full: "30 2 * * 0" # Sunday at 02:30
-            incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
-  dataSource:
-    pgbackrest:
-      stanza: db
-      configuration: *backupConfig
-      global: *backupFlag
-      repo:
-        name: repo1
-        s3: *minio
+        # - name: repo2
+        #   s3:
+        #     bucket: crunchy-pgo
+        #     endpoint: ${R2_ENDPOINT}
+        #     region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
+        #   schedules:
+        #     full: "30 2 * * 0" # Sunday at 02:30
+        #     incremental: "30 2 * * 1-6/2" # Mon-Sat at 02:30, every 2nd day
+  # dataSource:
+  #   pgbackrest:
+  #     stanza: db
+  #     configuration: *backupConfig
+  #     global: *backupFlag
+  #     repo:
+  #       name: repo1
+  #       s3: *minio
   proxy:
     pgBouncer:
       port: 5432
