feat: migrate dragonfly to components

--- a/kubernetes/apps/base/security/authentik/helmrelease.yaml
+++ b/kubernetes/apps/base/security/authentik/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
             name: authentik-secret
     authentik:
       redis:
-        host: dragonfly.database.svc.cluster.local
+        host: authentik-dragonfly
     server:
       autoscaling:
         enabled: true
