--- a/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
+++ b/kubernetes/apps/base/self-hosted/paperless/helmrelease.yaml
@@ -32,7 +32,6 @@ spec:
             env:
               # Configure application
               PAPERLESS_APPS: allauth.socialaccount.providers.openid_connect
-              PAPERLESS_REDIS_PREFIX: pngx
               PAPERLESS_URL: https://paperless.${SECRET_DOMAIN}
               PAPERLESS_PORT: "8000"
               PAPERLESS_TIME_ZONE: ${TIMEZONE}
@@ -54,7 +53,7 @@ spec:
               PAPERLESS_OCR_LANGUAGES: nld
               PAPERLESS_OCR_LANGUAGE: nld
               # Configure redis integration
-              PAPERLESS_REDIS: redis://dragonfly.database.svc.cluster.local:6379
+              PAPERLESS_REDIS: redis://paperless-dragonfly:6379
               # Configure user permissions
               USERMAP_GID: "65542"
             envFrom:
