--- a/kubernetes/apps/main/self-hosted/paperless/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/paperless/ks.yaml
@@ -9,7 +9,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../components/gatus/guarded
+    - ../../../../components/dragonfly
+    - ../../../../components/gatus/external
     - ../../../../components/postgres
     - ../../../../components/volsync
   dependsOn:
@@ -18,6 +19,10 @@ spec:
     - name: dragonfly-cluster
       namespace: database
   healthCheckExprs:
+    - apiVersion: dragonflydb.io/v1alpha1
+      kind: Dragonfly
+      failed: status.phase != 'ready'
+      current: status.phase == 'ready'
     - apiVersion: postgres-operator.crunchydata.com/v1beta1
       kind: PostgresCluster
       failed: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'False')
