feat: cleanup old dragonfly db

--- a/kubernetes/components/postgres/cluster.yaml
+++ b/kubernetes/components/postgres/cluster.yaml
@@ -34,8 +34,8 @@ spec:
           app.kubernetes.io/name: ${APP}-crunchy-postgres
       replicas: &replicas 2
       dataVolumeClaimSpec:
-        storageClassName: local-hostpath
-        accessModes: ["ReadWriteOnce"]
+        storageClassName: ceph-filesystem
+        accessModes: ["ReadWriteMany"]
         resources:
           requests:
             storage: 20Gi
