feat: scale down pgbouncer

--- a/kubernetes/apps/main/downloads/readarr/ks.yaml
+++ b/kubernetes/apps/main/downloads/readarr/ks.yaml
@@ -24,6 +24,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      DATABASES: '["readarr", "readarr_cache", "readarr_log"]'
   prune: true
   retryInterval: 2m
   sourceRef:
