--- a/kubernetes/apps/main/security/authentik/ks.yaml
+++ b/kubernetes/apps/main/security/authentik/ks.yaml
@@ -15,7 +15,7 @@ spec:
   dependsOn:
     - name: crunchy-postgres-operator
       namespace: database
-    - name: dragonfly-cluster
+    - name: dragonfly-operator
       namespace: database
   healthCheckExprs:
     - apiVersion: dragonflydb.io/v1alpha1
